# apertium-init

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  Pipfile  README.md  apertium-init.py  apertium_init.py  languages.tsv  main.py  requirements.txt  setup.py  test.py  updateBootstrapper.py  updateLanguageList.sh
.github/workflows/: main.yml
any-module/: .gitattributes  .gitignore  updateBootstraper.py
apertium-foo/: Makefile.am  README  apertium-foo.foo.dix  apertium-foo.foo.rlx  apertium-foo.pc.in  configure.ac  foo.prob  modes.xml
apertium-foo/corpus/: foo.tagged
bilingual-module/: MANIFEST.txt  Makefile.am  README  README.md  apertium-{{languageCode1}}-{{languageCode2}}.{{languageCode1}}-{{languageCode2}}.arx  apertium-{{languageCode1}}-{{languageCode2}}.{{languageCode1}}-{{languageCode2}}.dix  apertium-{{languageCode1}}-{{languageCode2}}.{{languageCode1}}-{{languageCode2}}.lrx  apertium-{{languageCode1}}-{{languageCode2}}.{{languageCode1}}-{{languageCode2}}.lsx  apertium-{{languageCode1}}-{{languageCode2}}.{{languageCode1}}-{{languageCode2}}.rtx  apertium-{{languageCode1}}-{{languageCode2}}.{{languageCode1}}-{{languageCode2}}.t2x  apertium-{{languageCode1}}-{{languageCode2}}.{{languageCode1}}-{{languageCode2}}.t3x  apertium-{{languageCode1}}-{{languageCode2}}.{{languageCode2}}-{{languageCode1}}.arx  apertium-{{languageCode1}}-{{languageCode2}}.{{languageCode2}}-{{languageCode1}}.lrx  apertium-{{languageCode1}}-{{languageCode2}}.{{languageCode2}}-{{languageCode1}}.lsx  apertium-{{languageCode1}}-{{languageCode2}}.{{languageCode2}}-{{languageCode1}}.rtx  apertium-{{languageCode1}}-{{languageCode2}}.{{languageCode2}}-{{languageCode1}}.t1x  apertium-{{languageCode1}}-{{languageCode2}}.{{languageCode2}}-{{languageCode1}}.t2x  configure.ac  gt2apertium.cg3r  modes.xml  updateBootstraper.py  updateBootstrapers.sh
bilingual-module/any-bilingual-module/: apertium-{{languageCode1}}-{{languageCode2}}.{{languageCode1}}-{{languageCode2}}.dix  apertium-{{languageCode1}}-{{languageCode2}}.{{languageCode1}}-{{languageCode2}}.lrx  apertium-{{languageCode1}}-{{languageCode2}}.{{languageCode1}}-{{languageCode2}}.t2x  apertium-{{languageCode1}}-{{languageCode2}}.{{languageCode2}}-{{languageCode1}}.t1x  apertium-{{languageCode1}}-{{languageCode2}}.{{languageCode2}}-{{languageCode1}}.t2x  apertium-{{languageCode1}}-{{languageCode2}}.{{languageCode2}}-{{languageCode1}}.t3x  modes.xml
bilingual-module/hfst-bilingual-module/: Makefile.am  README  configure.ac  updateBootstraper.py
bilingual-module/hfst-lttoolbox-bilingual-module/: Makefile.am  configure.ac
bilingual-module/lttoolbox-bilingual-module/: Makefile.am  README  configure.ac  modes.xml  updateBootstraper.py
bilingual-module/lttoolbox-hfst-bilingual-module/: Makefile.am  README  configure.ac
bilingual-module/test/: tests.json  {{languageCode1}}-{{languageCode2}}-input.txt  {{languageCode2}}-{{languageCode1}}-input.txt
hfst-language-module/: MANIFEST.txt  Makefile.am  README  README.md  apertium-{{languageCode}}.pc.in  apertium-{{languageCode}}.post-{{languageCode}}.dix  apertium-{{languageCode}}.{{languageCode}}.lexc  apertium-{{languageCode}}.{{languageCode}}.lexd  apertium-{{languageCode}}.{{languageCode}}.rlx  apertium-{{languageCode}}.{{languageCode}}.spellrelax  apertium-{{languageCode}}.{{languageCode}}.twoc  apertium-{{languageCode}}.{{languageCode}}.twol  configure.ac  modes.xml  spellrelax.twoc  updateBootstraper.py
hfst-language-module/speller/: editdist.default.txt  index.xml
hfst-language-module/test/: analysis-input.txt
lttoolbox-language-module/: Makefile.am  README  README.md  apertium-{{languageCode}}.pc.in  apertium-{{languageCode}}.post-{{languageCode}}.dix  apertium-{{languageCode}}.{{languageCode}}.acx  apertium-{{languageCode}}.{{languageCode}}.dix  apertium-{{languageCode}}.{{languageCode}}.rlx  apertium-{{languageCode}}.{{languageCode}}.udx  bootstrap.py  configure.ac  modes.xml  updateBootstraper.py
lttoolbox-language-module/test/: generation-input.txt  tests.json
